2001-03-22  Andreas Jaeger  <aj@suse.de>

	* iconvdata/Makefile (generated): Add iconv-test.xxx.

	* posix/Makefile (generated): Add bug-regex2.mtrace and
	bug-regex2-mem.

2001-03-21  Ulrich Drepper  <drepper@redhat.com>

	* csu/version.c (__gnu_get_libc_release): Add prototype.
	(__gnu_get_libc_version): Likewise.
	* include/gnu/libc-version.h: Remove prototypes for not exported
	functions.

2001-03-21  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/unix/sysv/linux/ia64/makecontext.c: Include libintl.h
	for internationalized printfs to work.

2001-03-09  Bruno Haible  <haible@clisp.cons.org>

	* intl/dcigettext.c (transmem_block_t): Change to unsigned char, to
	avoid compiler warning.
	(_nl_find_msg): Add casts to avoid compiler warnings.

2001-03-21  Ulrich Drepper  <drepper@redhat.com>

	* gmon/Makefile (routines): Add sprofil.
	(tests): Add tst-sprofil.
	(noprof): Add sprofil.
	* gmon/Versions [libc] (GLIBC_2.2.3): Add sprofil.

2001-03-20  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/generic/sprofil.c: New file.
	* sysdeps/posix/sprofil.c: New file.
	* gmon/tst-sprofil.c: New file.
	* gmon/sys/profil.h: New file.

2001-03-20  Andreas Schwab  <schwab@suse.de>

	* include/unistd.h: Adjust prototype of __gethostname.

2001-03-20  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/stackinfo.h: New file.

2001-03-21  Andreas Jaeger  <aj@suse.de>

	* elf/global.c (main): Use proper prototype.

2001-03-20  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/Makefile (routines): Add rpc_thread.
	(CPPFLAGS): Add -D_RPC_THREAD_SAFE.
	* sunrpc/rpc_thread.c: New file.
	* sunrpc/Versions [libc] (GLIBC_2.2.3): Export __rpc_thread_destroy.
	* sunrpc/auth_none.c: Don't use global variables.  Access state in
	thread-local storage.
	* sunrpc/clnt_perr.c: Likewise.
	* sunrpc/clnt_raw.c: Likewise.
	* sunrpc/clnt_simp.c: Likewise.
	* sunrpc/key_call.c: Likewise.
	* sunrpc/rpc_common.c: Likewise.
	* sunrpc/svc.c: Likewise.
	* sunrpc/svc_raw.c: Likewise.